fixed view button icon alignment

--- a/app/assets/stylesheets/movies.css.sass
+++ b/app/assets/stylesheets/movies.css.sass
@@ -43,26 +43,34 @@ header
 .view-select
   float: right
   background-color: #353535
-  text-align: center
-  padding: 13px 0 0 0
-  width: 112px
+  padding: 13px 0 0 18px
+  width: 132px
   height: 44px
   border-radius: 6px
   font-family: $boldFont, sans-serif
   margin-top: 37px
+  position: relative
+
+  i
+    display: inline-block
+    color: #eee
+    position: relative
+    top: 0px
+    width: 12px
+    height: 18px
+    background: url(img/arrows.png)
+    display: inline-block
+    margin-left: 8px
+    position: absolute
+    top: 13px
+    right: 16px
+
+  div
+    display: inline-block
 
 a.view-select
   color: #eee
   text-decoration: none
-
-.change-icon
-  width: 12px
-  height: 18px
-  background: url(img/arrows.png)
-  display: inline-block
-  margin-left: 8px
-  position: relative
-  top: 3px
 
 h1
   font-size: 60px
